# jampio-common

./: CMakeLists.txt  README.md
src/: AutoVersion.h  CommandArgs.cpp  CommandArgs.h  CommandBuffer.cpp  CommandBuffer.h  CommandLine.cpp  CommandLine.h  CommandSystem.cpp  CommandSystem.h  Cvar.cpp  Cvar.h  CvarSystem.cpp  CvarSystem.h  GenericParser2.h  MiniHeap.h  MiniHeap_globals.h  RoffSystem.h  VM.cpp  VM.h  _cmd_old.h  _cvar_old.cpp  cm.h  cmd.cpp  cmd.h  cmd_init.cpp  cmd_init.h  com.cpp  com.h  com_vars.h  common.cpp  common.h  common_globals.h  cpuid.h  cvar.cpp  cvar.h  cvar_init.cpp  cvar_init.h  filefmt.h  files.cpp  fs.cpp  (+21 more)
src/cm/: cm.h  landscape.h  load.cpp  local.h  patch.cpp  polylib.h  randomterrain.h
src/g2/: CBoneCache.h  CGhoul2Info.h  CGhoul2Info_v.h  CTransformBone.h  IGhoul2InfoArray.h  SBoneCalc.h  api.h  boltInfo.h  boneInfo.h  g2.h  gore.h  mdx.h  surfaceInfo.h  transform.cpp  transform.h
src/icarus/: GameInterface.h  blockstream.h  instance.h  interface.h  memory.h  sequence.h  sequencer.h  taskmanager.h
src/interface/: client.h  server.h  ui.h
src/parser/: CGPGroup.cpp  CGPGroup.h  CGPObject.cpp  CGPObject.h  CGPValue.cpp  CGPValue.h  CGenericParser.cpp  CGenericParser2.h  CTextPool.cpp  CTextPool.h  generic_parser.cpp  generic_parser.h
src/renderer/types/: EGLFogOverride.h  acff.h  alphaGen.h  bmodel.h  colorGen.h  cullType.h  deform.h  deformStage.h  fogParms.h  fogPass.h  genFunc.h  image.h  model.h  modtype.h  msurface.h  shader.h  shaderStage.h  skyParms.h  surfaceSprite.h  surfaceType.h  texCoordGen.h  texMod.h  texModInfo.h  textureBundle.h  waveForm.h
src/rmg/: CRMManager.cpp  CRMManager.h  CRMObjective.cpp  CRMObjective.h  area.h  automap_symbol.h  instance.h  instance_file.h  manager.h  mission.h  objective.h  path.h  symmetry.h
